--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=KYC-Backend
+server.port=8034
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=kycdb
+spring.datasource.password=ntic
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+
+sumsub.app-token=sbx:cDGlQ9jPjafoanrdU0FOSIhr.Tv43NDNOlPn4cW4wQGs3XV0D9o2SI0Vf
+sumsub.secret-key=fUoaeBfYcwZA1SOybNrlMDeXrM0zxW17
+sumsub.base-url=https://api.sumsub.com
+
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=kyc-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+#sumsub.app-token=YOUR_SUMSUB_APP_TOKEN
+#sumsub.secret-key=YOUR_SUMSUB_SECRET_KEY
+#sumsub.base-url=https://api.sumsub.com
